# dataportal

./: ProjectHome.md
tags/r1/source/3.2.1/server/r1/: Makefile.in  config.status  configure.cclrc.isis  configure.in
tags/r1/source/3.2.1/server/r1/MCAT/: Makefile  README.MCAT.PATCH
tags/r1/source/3.2.1/server/r1/MCAT/data/: 212to300patch.db2  catalog.install.mys  catalog.install.ora  catalog.patch.db2.118rel  installmcat.db2  psbinstall.results.ora
tags/r1/source/3.2.1/server/r1/MCAT/java/src/: mcatAdmin.java  mcatNewUser.java  mcatNewZone.java  mcatShowUsers.java
tags/r1/source/3.2.1/server/r1/MCAT/test/: bload.filelarge21  test_srb_mdas_get.c  test_srb_mdas_get_srbusers.c  test_srb_mdas_insertschema.c  test_srb_mdas_mod.c  test_srb_mdas_open.c
tags/r1/source/3.2.1/server/r1/MCAT/utilities/: ingestResource.c
tags/r1/source/3.2.1/server/r1/NT/srbMaster/: srbMaster.plg
tags/r1/source/3.2.1/server/r1/admin/src/: srbMon.c
tags/r1/source/3.2.1/server/r1/data/: LobjConfig  mcatHost  tapeDevConfig
tags/r1/source/3.2.1/server/r1/jargon/src/api/edu/sdsc/grid/io/: GeneralFile.java  MetaDataField.java  MetaDataTable.java  RemoteFileSystem.java  RemoteRandomAccessFile.java
tags/r1/source/3.2.1/server/r1/jargon/src/api/edu/sdsc/grid/io/local/: LocalFile.java  LocalRandomAccessFile.java
tags/r1/source/3.2.1/server/r1/jargon/src/api/edu/sdsc/grid/io/metadata/: SRBMetaDataRecordList.java  SRBProtocol.java
tags/r1/source/3.2.1/server/r1/jargon/src/test/: FactoryTest.java  MetaDataTest.java  Sls.java
tags/r1/source/3.2.1/server/r1/java/src/: srbBrowser.java  srbClObj.java  srbTree.java
tags/r1/source/3.2.1/server/r1/matrix/: build.properties  srb.wsdl
tags/r1/source/3.2.1/server/r1/matrix/docs/: LICENSE.txt  ReleaseNotes.txt
tags/r1/source/3.2.1/server/r1/matrix/examples/: SRBJaxmSender.java  dummyfile.txt
tags/r1/source/3.2.1/server/r1/matrix/parser/: sampleDataGridRequest.xml  srb.xsd
tags/r1/source/3.2.1/server/r1/matrix/src/edu/sdsc/matrix/srb/client/: ActiveDatagridCollection.java  DataGridResponse.java  DataLock.java  IngestMetadataParams.java  MatrixConnection.java  MetaDataTemplateDublinCore.java  Operation.java  PrepareTicketOp.java  RenameParams.java  SeekNReadOp.java  SeekNWriteParams.java  StdDatagridObject.java  Step.java  SystemMetaData.java  TicketID.java  Transaction.java  TransactionAcknowledgment.java  package.html
tags/r1/source/3.2.1/server/r1/matrix/src/edu/sdsc/matrix/srb/operations/: IngestDataSetOperation.java  ReplicateOperation.java
tags/r1/source/3.2.1/server/r1/matrix/src/edu/sdsc/matrix/srb/query/: ParseException.java
tags/r1/source/3.2.1/server/r1/matrix/src/edu/sdsc/matrix/srb/util/: SRBMetaDataFieldMappings.java
tags/r1/source/3.2.1/server/r1/matrix/webapps/: web.xml
tags/r1/source/3.2.1/server/r1/mk/: mk.config
tags/r1/source/3.2.1/server/r1/mk/RPM/: README  SRB.spec.in  srb.sh
tags/r1/source/3.2.1/server/r1/preload/script/: srbalias
tags/r1/source/3.2.1/server/r1/readme.dir/: README.DAI  README.MCAT.ADMIN  README.PORTING_MCAT_DAI_DRIVERS  README.clientAPI  README.first.htm  README.gsi.htm  ReleaseNotes3.0.1  ReleaseNotes3.2
tags/r1/source/3.2.1/server/r1/readme.dir/client_only_releases/: Makefile  README  Slstest  metaFile4  srb.h
tags/r1/source/3.2.1/server/r1/readme.dir/web/: Data_Han.doc
tags/r1/source/3.2.1/server/r1/src/back/: exfFunct.c  ifmxDvrLib.c  oraDvrLib.c  oraTableDvr.c  srbObjFunct.c.copy  srbServer.c  unixFileDvr.c
tags/r1/source/3.2.1/server/r1/src/catalog/include/: mdasC_mys_externs.h  mdasC_syb_externs.h  mdasGlobalsExtern.h  mdasPrototypes.h  srbC_mdas_externs.h
tags/r1/source/3.2.1/server/r1/src/catalog/mdas/: mdasC_db2_dcon.c  mdasC_ora_internal.c  strct_lib.c
tags/r1/source/3.2.1/server/r1/src/catalog/mdas-srb/: srbC_mdas_library.c  srbC_mdas_library2.c  srbC_mdas_library7.c
tags/r1/source/3.2.1/server/r1/src/client/: clChksum.c  clMisc.c
tags/r1/source/3.2.1/server/r1/src/front/: srbMaster.c
tags/r1/source/3.2.1/server/r1/src/include/: auth.h  authExtern.h  clConnect.h  clConnectExtern.h  clExec.h  clMiscExtern.h  clStubExtern.h  commExtern.h  dbLobj.h  dbLobjExtern.h  distribExtern.h  exfSwExtern.h  ftpFileDvrExtern.h  functionHandler.h  ifmxTableDvr.h  mysDvrLib.h  ntFileDvr.h  packDef.h  packMsgExtern.h  psgTableDvr.h  srb.h  srbC_httpc_library.h  srbMaster.h  srbServerInit.h  srbServerMiscExtern.h  srbServerSfo.h  sybTableDvr.h  unixFileDvr.h
tags/r1/source/3.2.1/server/r1/src/lib/: comm.c  crypt1.c  logEval.c  mcatgeneral.c  srbSecureComm.c
tags/r1/source/3.2.1/server/r1/src/nt_util/: SrbNtUtil.c
tags/r1/source/3.2.1/server/r1/tape/src/: rewtape.c  standalone.c
tags/r1/source/3.2.1/server/r1/test/APItest/src/: testPcommand.c  testexf.c  testhttp.c  testunlink.c  testuser.c  threads.c  usetick.c
tags/r1/source/3.2.1/server/r1/test/GSItest/: aids.c
tags/r1/source/3.2.1/server/r1/test/commandtest/: test1.dev.sh  test1.result.out  test1.user.sh  test2.user.sh
tags/r1/source/3.2.1/server/r1/test/examples/: Makefile
tags/r1/source/3.2.1/server/r1/test/testsuite/: Makefile  testsuite.zone
tags/r1/source/3.2.1/server/r1/test/testsuite/data/: MDAS-logo.rgb
tags/r1/source/3.2.1/server/r1/test/testsuite/src/: srbchkauth.c  srbfchmod.c  srbvaultinfo.c
tags/r1/source/3.2.1/server/r1/utilities/man/: ManPageHowto.htm
tags/r1/source/3.2.1/server/r1/utilities/man/html/: Sannotate.1.html  Sappend.1.html  Sattrs.1.html  Sexit.1.html  SgetR.1.html  SgetU.1.html  Shelp.1.html  Smv.1.html  Spasswd.1.html  Sphymove.1.html  Spushmeta.1.html  Sregisterlocation.1.html  Srm.1.html  Srmcont.1.html  Stcat.1.html  Sticket.1.html
tags/r1/source/3.2.1/server/r1/utilities/man/man1/: Sbload.1  Scp.1  Sget.1  SgetD.1  Smkdir.1  Sphymove.1  Sput.1  Sreplicate.1  Stls.1  Stoken.1  template.1
tags/r1/source/3.2.1/server/r1/utilities/src/: Sbkupsrb.c  Sbregister.c  Scat.c  Schmod.c  Sexit.c  SgetColl.c  SgetT.c  Singestuser.c  SmodifyUser.c  Sphymove.c  Spushmeta.c  Sregister.c  Sreplcont.c  Srm.c  Stcat.c  Stls.c  Stoken.c  bloadLib.c.sav  srbClientUtil.c  srbparget.c  srbpput.c
(+5010 files in other folders)
